# git-remote-xcrypt

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.zh_CN.md
src/: Makefile  aes.cpp  common.h  crypto.cpp  git.cpp  main.cpp  omp.cpp  progress.cpp  remote_helper.cpp  user_command.cpp  util.cpp
